<resources>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="login_now">立即登录</string>
    <string name="follows">关注</string>
    <string name="fans">粉丝</string>
    <string name="bought">已购</string>
    <string name="music_list">歌单</string>
    <string name="like">喜欢</string>
    <string name="local">本地</string>
    <string name="recently_play">最近播放</string>
    <string name="my_list">我的歌单</string>
    <string name="may_like">猜你喜欢</string>
    <string name="follow">关注</string>
    <string name="edit">编辑</string>
    <string name="change_background">更换背景</string>
    <string name="created_music_list">创建的歌单</string>
    <string name="submited_album">收藏的专辑</string>
    <string name="empty_event">暂无动态信息</string>
    <string name="share_song">分享单曲</string>
    <string name="share_album">分享专辑</string>
    <string name="share_radio">分享电台节目</string>
    <string name="forward">转发</string>
    <string name="publish_video">发布视频</string>
    <string name="share_music_list">分享歌单</string>
    <string name="share_article">分享专栏文章</string>
    <string name="share_video">分享视频</string>
</resources>