<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="105dp">

    <com.brins.baselib.widget.RoundConstraintLayout
        android:id="@+id/cl_unlogin"
        android:layout_width="match_parent"
        android:layout_height="90dp"
        android:layout_marginTop="15dp"
        android:background="@color/white"
        app:layout_constraintTop_toTopOf="parent"
        app:round_corner="15dp">

        <TextView
            android:id="@+id/tv_login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="105dp"
            android:layout_marginTop="10dp"
            android:text="@string/login_now"
            android:textColor="@color/black"
            android:textSize="15sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/iv_login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/base_icon_right_black"
            app:layout_constraintBottom_toBottomOf="@id/tv_login"
            app:layout_constraintStart_toEndOf="@id/tv_login"
            app:layout_constraintTop_toTopOf="@id/tv_login" />

        <LinearLayout
            android:id="@+id/ll_follows_fans"
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:layout_marginTop="55dp"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:paddingStart="30dp"
            android:paddingEnd="30dp"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:id="@+id/tv_follows"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/follows"
                android:textColor="@color/black"
                android:textSize="14sp" />

            <View
                android:layout_width="1dp"
                android:layout_height="match_parent"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:background="@color/gery" />

            <TextView
                android:id="@+id/tv_fans"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/fans"
                android:textColor="@color/black"
                android:textSize="14sp" />


        </LinearLayout>
    </com.brins.baselib.widget.RoundConstraintLayout>

    <ImageView
        android:id="@+id/iv_avatar"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_marginStart="30dp"
        android:src="@drawable/base_icon_default_avatar"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>