<?xml version="1.0" encoding="utf-8"?>
<merge>
    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:id="@+id/ll_mine_info"
        android:layout_width="match_parent"
        android:layout_height="290dp"
        android:layout_marginTop="80dp"
        android:background="@drawable/base_shape_rect_black_gradient_90_background"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="144dp">

            <com.brins.baselib.widget.CircleImageView
                android:id="@+id/iv_avatar"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:layout_centerVertical="true"
                android:layout_marginStart="20dp"
                android:scaleType="centerCrop"
                app:es_shape_type="round" />

            <TextView
                android:id="@+id/tv_addfocus"
                android:layout_width="140dp"
                android:layout_height="40dp"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true"
                android:layout_marginEnd="10dp"
                android:background="@drawable/base_shape_round_red"
                android:gravity="center"
                android:text="关注"
                android:visibility="gone"
                android:textColor="@color/white"
                android:textSize="15sp" />

        </RelativeLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingLeft="12dp"
            android:paddingRight="12dp"
            android:paddingBottom="12dp">

            <TextView
                android:id="@+id/tv_nickname"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="昵称"
                android:textColor="@color/white"
                android:textSize="25sp" />

            <LinearLayout
                android:id="@+id/ll_follows_fans"
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:layout_marginTop="5dp"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                app:layout_constraintTop_toTopOf="parent">

                <TextView
                    android:id="@+id/tv_follows"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/follows"
                    android:textColor="@color/white"
                    android:textSize="14sp" />

                <View
                    android:layout_width="1dp"
                    android:layout_height="10dp"
                    android:layout_marginStart="20dp"
                    android:layout_marginEnd="20dp"
                    android:background="@color/gery" />

                <TextView
                    android:id="@+id/tv_fans"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/fans"
                    android:textColor="@color/white"
                    android:textSize="14sp" />


            </LinearLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/tv_level"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:background="@drawable/base_bg_15dp_grey"
                    android:paddingStart="5dp"
                    android:paddingTop="2dp"
                    android:paddingEnd="5dp"
                    android:paddingBottom="2dp"
                    android:text="Lv.7"
                    android:textColor="@color/white"
                    android:textSize="15sp"
                    android:textStyle="italic" />

                <TextView
                    android:id="@+id/tv_change_background"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="10dp"
                    android:layout_toLeftOf="@id/tv_edit"
                    android:background="@drawable/base_bg_15dp_grey"
                    android:paddingStart="15dp"
                    android:paddingTop="5dp"
                    android:paddingEnd="15dp"
                    android:paddingBottom="5dp"
                    android:text="@string/change_background"
                    android:textColor="@color/white"
                    android:textSize="15sp" />

                <TextView
                    android:id="@+id/tv_edit"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:background="@drawable/base_bg_15dp_grey"
                    android:paddingStart="15dp"
                    android:paddingTop="5dp"
                    android:paddingEnd="15dp"
                    android:paddingBottom="5dp"
                    android:text="@string/edit"
                    android:textColor="@color/white"
                    android:textSize="15sp" />
            </RelativeLayout>

        </LinearLayout>

    </LinearLayout>
</merge>
